kubernetes/base/cloudmart-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: cloudmart-frontend
  namespace: cloudmart

spec:
  replicas: 1

  selector:
    matchLabels:
      app: cloudmart-frontend

  template:
    metadata:
      labels:
        app: cloudmart-frontend

    spec:
      containers:

      - name: cloudmart-frontend

        image: ghcr.io/igordems/cloudmart-frontend:latest

        imagePullPolicy: Always

        ports:
        - containerPort: 3000


        command:
        - npx
        - serve
        - -s
        - .
        - -l
        - "3000"
