kubernetes/base/cloudmart-frontend/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: cloudmart-frontend
  namespace: cloudmart

spec:

  type: ClusterIP

  selector:
    app: cloudmart-frontend


  ports:

  - name: http

    port: 80

    targetPort: 3000
