kubernetes/base/cloudmart-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress


metadata:

  name: cloudmart-frontend-ingress

  namespace: cloudmart


  annotations:

    kubernetes.io/ingress.class: nginx

    nginx.ingress.kubernetes.io/ssl-redirect: "false"


spec:

  rules:

  - host: cloudmart.192.168.1.240.sslip.io


    http:

      paths:

      - path: /

        pathType: Prefix


        backend:

          service:

            name: cloudmart-frontend

            port:

              number: 80
